feature: add tooltip for branches (#228)

--- a/src/Views/Archive.axaml
+++ b/src/Views/Archive.axaml
@@ -23,7 +23,7 @@
           <DataTemplate DataType="m:Branch">
             <StackPanel Orientation="Horizontal">
               <Path Width="14" Height="14" Data="{StaticResource Icons.Branch}"/>
-              <TextBlock VerticalAlignment="Center" Text="{Binding Converter={x:Static c:BranchConverters.ToName}}" Margin="8,0,0,0"/>
+              <TextBlock VerticalAlignment="Center" Text="{Binding FriendlyName}" Margin="8,0,0,0"/>
             </StackPanel>
           </DataTemplate>
 
