--- a/src/Views/DeleteBranch.axaml
+++ b/src/Views/DeleteBranch.axaml
@@ -18,7 +18,7 @@
       <TextBlock Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" Text="{DynamicResource Text.DeleteBranch.Branch}"/>
       <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
         <Path Width="14" Height="14" Margin="8,0" Data="{StaticResource Icons.Branch}"/>
-        <TextBlock Text="{Binding Target, Converter={x:Static c:BranchConverters.ToName}}"/>
+        <TextBlock Text="{Binding Target.FriendlyName}}"/>
       </StackPanel>
 
       <Border Grid.Row="1" Grid.Column="1" Height="32" IsVisible="{Binding !Target.IsLocal}">
