--- a/src/Views/CommitDetail.axaml
+++ b/src/Views/CommitDetail.axaml
@@ -17,58 +17,55 @@
         <TextBlock Classes="tab_header" Text="{DynamicResource Text.CommitDetail.Info}"/>
       </TabItem.Header>
 
-      <Grid RowDefinitions="Auto,1,*">
-        <!-- Base Information -->
-        <v:CommitBaseInfo Grid.Row="0" Content="{Binding Commit}" Message="{Binding FullMessage}"/>
+      <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+        <StackPanel Orientation="Vertical">
+          <!-- Base Information -->
+          <v:CommitBaseInfo Content="{Binding Commit}" Message="{Binding FullMessage}"/>
 
-        <!-- Line -->
-        <Rectangle Grid.Row="1" Height=".65" Margin="8" Fill="{DynamicResource Brush.Border2}" VerticalAlignment="Center"/>
+          <!-- Line -->
+          <Rectangle Height=".65" Margin="8" Fill="{DynamicResource Brush.Border2}"/>
 
-        <!-- Change List -->
-        <DataGrid Grid.Row="2"
-                  Background="Transparent"
-                  ItemsSource="{Binding Changes}"
-                  SelectionMode="Single"
-                  CanUserReorderColumns="False"
-                  CanUserResizeColumns="False"
-                  CanUserSortColumns="False"
-                  IsReadOnly="True"
-                  HeadersVisibility="None"
-                  Focusable="False"
-                  RowHeight="26"
-                  Margin="64,0,8,16"
-                  HorizontalScrollBarVisibility="Disabled"
-                  VerticalScrollBarVisibility="Auto"
-                  ContextRequested="OnChangeListContextRequested"
-                  DoubleTapped="OnChangeListDoubleTapped">
-          <DataGrid.Styles>
-            <Style Selector="DataGridRow">
-              <Setter Property="CornerRadius" Value="4"/>
-            </Style>
-            <Style Selector="DataGridRow /template/ Border#RowBorder">
-              <Setter Property="ClipToBounds" Value="True"/>
-            </Style>
-          </DataGrid.Styles>
-          
-          <DataGrid.Columns>
-            <DataGridTemplateColumn Width="36" Header="ICON">
-              <DataGridTemplateColumn.CellTemplate>
-                <DataTemplate>
-                  <v:ChangeStatusIcon Width="14" Height="14" HorizontalAlignment="Left" Margin="16,0,0,0" IsWorkingCopyChange="False" Change="{Binding}"/>
-                </DataTemplate>
-              </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
+          <!-- Change List -->
+          <ListBox Background="Transparent" 
+                   Margin="64,0,8,4"
+                   SelectionMode="Single"
+                   ItemsSource="{Binding Changes, Converter={x:Static c:ListConverters.Top100Changes}}">
+            <ListBox.Styles>
+              <Style Selector="ListBoxItem">
+                <Setter Property="Padding" Value="0"/>
+                <Setter Property="MinHeight" Value="26"/>
+                <Setter Property="CornerRadius" Value="4"/>
+              </Style>
+            </ListBox.Styles>
+            
+            <ListBox.ItemsPanel>
+              <ItemsPanelTemplate>
+                <StackPanel Orientation="Vertical"/>
+              </ItemsPanelTemplate>
+            </ListBox.ItemsPanel>
+            
+            <ListBox.ItemTemplate>
+              <DataTemplate DataType="m:Change">
+                <Grid Background="Transparent" Height="26" ColumnDefinitions="36,*" ContextRequested="OnChangeContextRequested" DoubleTapped="OnChangeDoubleTapped">
+                  <v:ChangeStatusIcon Grid.Column="0" 
+                                      Width="14" Height="14" 
+                                      HorizontalAlignment="Left" 
+                                      Margin="16,0,0,0" 
+                                      IsWorkingCopyChange="False" 
+                                      Change="{Binding}"/>
+                  <TextBlock Grid.Column="1" Classes="monospace" Text="{Binding Path}" Margin="8,0,0,0"/>
+                </Grid>
+              </DataTemplate>
+            </ListBox.ItemTemplate>
+          </ListBox>
 
-            <DataGridTemplateColumn Width="*" Header="PATH">
-              <DataGridTemplateColumn.CellTemplate>
-                <DataTemplate>
-                  <TextBlock Classes="monospace" Text="{Binding Path}" Margin="8,0,0,0"/>
-                </DataTemplate>
-              </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-          </DataGrid.Columns>
-        </DataGrid>
-      </Grid>
+          <!-- Only Top100 Tip -->
+          <TextBlock Margin="108,0,0,16" 
+                     Text="{DynamicResource Text.CommitDetail.Info.GotoChangesPage}" 
+                     Foreground="{DynamicResource Brush.FG2}"
+                     IsVisible="{Binding Changes, Converter={x:Static c:ListConverters.IsOnlyTop100Shows}}"/>
+        </StackPanel>
+      </ScrollViewer>
     </TabItem>
 
     <TabItem>
