ux: trim change path in information page

--- a/src/Views/CommitDetail.axaml
+++ b/src/Views/CommitDetail.axaml
@@ -53,7 +53,7 @@
                                       Margin="16,0,0,0" 
                                       IsWorkingCopyChange="False" 
                                       Change="{Binding}"/>
-                  <TextBlock Grid.Column="1" Classes="monospace" Text="{Binding Path}" Margin="8,0,0,0"/>
+                  <TextBlock Grid.Column="1" Classes="monospace" Text="{Binding Path}" Margin="8,0" TextTrimming="CharacterEllipsis"/>
                 </Grid>
               </DataTemplate>
             </ListBox.ItemTemplate>
