--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -66,8 +66,14 @@
                           Background="Transparent"
                           Padding="9,6"
                           IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=EnableDiffViewWordWrap, Mode=TwoWay}"
-                          IsVisible="{Binding IsTextDiff}"
                           ToolTip.Tip="{DynamicResource Text.Diff.ToggleWordWrap}">
+              <ToggleButton.IsVisible>
+                <MultiBinding Converter="{x:Static BoolConverters.And}">
+                  <Binding Path="IsTextDiff"/>
+                  <Binding Source="{x:Static vm:Preference.Instance}" Path="UseSideBySideDiff" Mode="OneWay" Converter="{x:Static BoolConverters.Not}"/>
+                </MultiBinding>
+              </ToggleButton.IsVisible>
+              
               <Path Width="12" Height="12" Data="{StaticResource Icons.WordWrap}" Margin="0,2,0,0"/>
             </ToggleButton>
 
