ux: force using double-click to expand/collapse item in TreeView (not TreeDataGrid)

--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -1216,7 +1216,8 @@
                                 Classes="tree_expander"
                                 Focusable="False"
                                 HorizontalAlignment="Center"
-                                IsChecked="{TemplateBinding IsExpanded, Mode=TwoWay}" />
+                                IsChecked="{TemplateBinding IsExpanded, Mode=TwoWay}"
+                                IsHitTestVisible="False" />
                 </Panel>
                 <ContentPresenter Name="PART_HeaderPresenter"
                                   Grid.Column="1"
